--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.7.2
 Django==5.0.2
 django-jazzmin==2.6.0
 django-map-widgets==0.4.2
+mysqlclient==2.2.4
 phonenumbers==8.13.31
 pillow==10.2.0
 sqlparse==0.4.4
